# advent-of-code-python

./: .gitignore  pyproject.toml
2025/01/: part_1.py  part_2.py
2025/02/: part_1.py  part_2.py  test_part_2.py
2025/03/: part_1.py  part_2.py  test_part_2.py
2025/04/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
2025/05/: part_1.py  part_2.py  test_part_2.py
2025/06/: part_1.py  part_2.py  test_part_2.py
2025/07/: part_1.py  part_2.py  test_part_2.py
advent_of_code/year_2024/: day_17.py
tests/: test_table.py
tests/year_2024/: test_day_02.py
