[project]
name = "advent-of-code-python"
version = "0.0.0"
description = "My Advent of Code solutions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.1",
    "pytest-benchmark>=5.1.0",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == \"__main__\":",
]
show_missing=true

[tool.coverage.run]
branch = true

[tool.mypy]
mypy_path = ["advent_of_code", "tests"]
files = ["advent_of_code", "tests"]
strict = true

[tool.pytest.ini_options]
addopts = "--cov=advent_of_code"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",           # Ignore absence of trailing commas, causes conflicts with formatter
    "D",                # Ignore docstring rules
    "INP001",           # Ignore missing `__init__.py`
    "ISC001",           # Ignore implicit string concatenation, causes conflicts with formatter
    "PLR2004",          # Ignore magic values
    "S101",             # Ignore asserts
    "S311",             # Ignore pseudo-random generators
    "T20"               # Ignore print rules
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "FBT001",           # Ignore boolean positional arguments in tests
]   

[tool.uv]
allow-insecure-host = [
    "pypi.org",
    "pypi.python.org",
    "files.pythonhosted.org"
]
